tests/baselines/reference/parserWithStatement2.errors.txt
parserWithStatement2.ts(1,1): error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.


==== parserWithStatement2.ts (1 errors) ====
    with (1)
    ~~~~~~~~
!!! error TS2410: The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.
      return;